fix: configure line wrapping via codemirror extension
Closes #4556

--- a/client/src/app/tabs/json/JSONEditor.less
+++ b/client/src/app/tabs/json/JSONEditor.less
@@ -37,7 +37,6 @@
 
     .cm-content {
       width: 100%;
-      white-space: normal;
       padding-right: 18px;
     }
 
@@ -64,7 +63,7 @@
       background-color: var(--json-editor-button-background-color);
       text-transform: capitalize;
     }
-    
+
     .cm-textfield {
       padding: 4px 8px;
       font-family: var(--font-family-monospace);
@@ -76,7 +75,7 @@
         font-family: var(--font-family);
       }
     }
-    
+
     .cm-panel.cm-search {
       label {
         font-size: var(--json-editor-font-size-small);
@@ -90,7 +89,7 @@
 
       [name=close] {
         font-size: 24px;
-        padding: 0px 8px; 
+        padding: 0px 8px;
       }
     }
   }
